# codecophony

./: .gitignore  Cargo.toml  README.md  build_codecophony_editor.sh
codecophony/: Cargo.toml
codecophony/examples/: first.rs
codecophony/src/: lib.rs  phrase.rs  project.rs
codecophony_editor/: Cargo.toml  Rocket.toml  index.html  main.js  package.json  style.css
codecophony_editor/src/: data.rs  interface.rs  main.rs  rendering.rs
codecophony_editor/static/: view.html
codecophony_editor_backend/: Cargo.toml
codecophony_editor_backend/src/: main.rs
codecophony_editor_frontend/: Cargo.toml
codecophony_editor_frontend/src/: data.rs  draw.rs  edited_note.rs  main.rs  misc.rs
codecophony_editor_shared/: Cargo.toml
codecophony_editor_shared/src/: lib.rs
eliduprees_songs_sandbox/: Cargo.toml
eliduprees_songs_sandbox/src/: lib.rs.not  main.rs  procedural_generation_1.rs  sandbox.rs
examples/: first.rs
src/: interval_optimizer.rs  lib.rs  main.rs  phrase.rs  project.rs  rendering_gui.rs
