[package]
name = "codecophony_editor_backend"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]

[dependencies]
codecophony = {path="../codecophony"}
codecophony_editor_shared = {path="../codecophony_editor_shared"}
#serde = "1.0"
serde_json = "1.0"
portaudio = "0.7"
dsp-chain = "0.13"
